# clip-to-notion

./: Cargo.toml  Makefile  README.md
src/: cli.rs  config.rs  encoding.rs  main.rs  notion.rs  scraper.rs  utils.rs
