[package]
name = "clip-to-notion"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.13", features = ["derive"] }
directories = "5.0.1"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
scraper = "0.19.1"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
toml = "0.8.19"

[[bin]]
name = "ctn"
path = "src/main.rs"